2005-02-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): pulse
	the progress while downloading an unspecified amount of data.

2005-02-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/uri-backend-wget.c: Handle HTTP 302 Redirect output
	from wget properly. Also give a little more informative display for
	unspecified sizes. Fixes bug #168322.

2005-02-24  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_open_as_layer_cmd_callback):
	preselect the image just as in file_open_from_image_cmd_callback().

2005-02-24  Michael Natterer  <mitch@gimp.org>

	Allow to resize layers with the image. Fixes bug #87789.
	Based on patch by Akkana Peck.

	* app/core/core-enums.[ch]: added enum GimpImageResizeLayers which
	can be one of { NONE, MATCHING, ALL }.

	* app/core/gimpimage-resize.[ch]: added new function
	gimp_image_resize_with_layers().

	* app/dialogs/resize-dialog.[ch]: added a "Layers" frame
	containing a "Resize Layers" combo box offering the choices above.
	Changed GimpResizeCallback signature accordingly.

	* app/actions/image-commands.c
	* app/actions/layers-commands.c: changed accordingly.

2005-02-23  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpbutton.c (gimp_button_button_press): don't
	reset button->press_state on double clicks because
	GDK_2BUTTON_PRESS always arrive immediately after
	GDK_BUTTON_PRESS, so resetting the state causes the second click
	of a double click to be always interpreted as "clicked", not
	"extended-clicked", breaking e.g. adding of multiple layers by
	shift-clicking the layers dialog's "new" button. Phew, too much
	text for a one-liner bug fix, blah... Spotted by Jimmac.
	Cleaned up this antique file a bit.

2005-02-23  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/*/Makefile.am
	* plug-ins/common/mkgen.pl: add libgimpmath deps
	needed because libgimpconfig links it.

2005-02-23  Shlomi Fish  <shlomif@iglu.org.il>
